--- a/ec/resource/css/style.css
+++ b/ec/resource/css/style.css
@@ -2,6 +2,7 @@ a {color:#46a0ee;text-decoration:none}
 a:hover,a:focus {color:#23527c;text-decoration:underline}
 ul,ol {list-style:none}
 img {max-width:100%;vertical-align:middle;border:0 none}
+.clear:after {content:'';display:block;clear:both}
 
 /* table */
     .table-wrap {overflow:auto}
@@ -16,8 +17,14 @@ img {max-width:100%;vertical-align:middle;border:0 none}
     table thead th {height:40px;border-bottom:0 none}
     table tbody th,table tbody td {height:38px}
     table thead tr th:first-child,table tbody tr td:first-child,table tbody tr th:first-child {border-left:0 none}
-    table tbody tr:hover {background-color:#eaf1ff}
-    table select {padding-top:1px;padding-bottom:1px;}
+    .data-table select {padding-top:1px;padding-bottom:1px;}
+    .data-table tbody tr.toggle-content:hover {background:#f5f5f5}
+    .data-table tbody tr:hover {background-color:#eaf1ff}    
+	.data-table td table {background: #fff}
+	.data-table td table th {background: #d6e4f7}
+	.data-table td table tbody th {border-left:0 none;border-color:#a6c0e3}
+	.data-table td table tbody th + td {border-left-color:#fff !important}
+	.data-table td table tbody tr:hover {background-color:#e9e9e9}
     /* col class list */
     .col-check {width:50px} /* 체크박스 */
     .col-toggle {width:40px} /* 아코디언 토글 */
@@ -31,11 +38,11 @@ img {max-width:100%;vertical-align:middle;border:0 none}
     .col-etc {width:160px} /* 인증유효기간 */
     .col-edit {width:56px}
     .col-del {width:56px}
+    .error-message {margin-top:10px;color:#fd4e4e}
 
 /* ico background */
     .toggle-lnb:after,.ec-menu > li:not(.single) > a:after,.ec-toggle-help,.btn-close:before,.ui-btn-toggle,.ui-scroll-table-header ul li > span:after
     {background-color:transparent;background-image:url('/ec/resource/images/sp_ico.png');background-repeat:no-repeat}
-
 
 /* Header */
     .ec-header {position:fixed;left:0;top:0;width:100%;height:50px;padding:12px 40px;z-index:10;background-color:#1a2437}
@@ -77,7 +84,7 @@ img {max-width:100%;vertical-align:middle;border:0 none}
     .ec-menu > li > a.active + .ec-menu-2depth {display:block}
 
 /* layout */
-    .ec-wrap {min-height:100%;padding:50px 0 30px;margin-left:210px;/* background-color:#e1e1e1; */transition:all .2s}
+    .ec-wrap {min-width:1070px;min-height:100%;padding:50px 0 30px;margin-left:210px;/* background-color:#e1e1e1; */transition:all .2s}
     .ec-wrap.expend {margin-left:0}
     .ec-row,.ec-help-content {margin:0 25px}
     .ec-section {margin:0 25px;padding:25px;background-color:#fff}
@@ -93,6 +100,7 @@ img {max-width:100%;vertical-align:middle;border:0 none}
     .paragraph p {font-size:12px;line-height:1.5;margin-bottom:10px}
     .page-title-sub {padding-left:10px;margin:20px 0;font-weight:300;border-left:4px solid #6e96e2}
     .ec-section .page-title-sub:nth-child(1) {margin-top:0}
+    .t-danger {color:#fd4e4e}
 
 /* Buttons */
     .ui-btn {
@@ -142,8 +150,10 @@ img {max-width:100%;vertical-align:middle;border:0 none}
     .btn-red.disabled,.btn-red.disabled:active,.btn-red.disabled:focus,.btn-red.disabled:hover,
     .btn-red[disabled],.btn-red[disabled]:active,.btn-red[disabled]:focus,.btn-red[disabled]:hover {border-color:#d43f3a;background-color:#d9534f}
 
+    .btn-wrap {margin-top:30px;text-align:center}
+
 /* forms */
-    input[type=text],input[type=password],textarea,select {font-size:12px;color:#666;line-height:1.5;border:1px solid #d9d9d9}
+    input[type=text],input[type=password],textarea,select {font-size:12px;color:#666;line-height:1.5;border:1px solid #d9d9d9}    
     input[type=text],input[type=password],textarea {width:100%}
     input[type=text],input[type=password] {padding:5px}
     input[type=text]:focus,input[type=password]:focus,textarea:focus {outline:1px solid #1f89ed;border-color:#1f89ed}
@@ -156,6 +166,9 @@ img {max-width:100%;vertical-align:middle;border:0 none}
         background:transparent url('/ec/resource/images/bg_select_arr.png') no-repeat 100% 50%;
         -webkit-appearance:none;-moz-appearance:none;appearance:none
     }
+    input[readonly],textarea[readonly],select[readonly] {background-color:#eaeaea}
+    input[readonly]:focus,textarea[readonly]:focus,select[readonly]:focus {outline:0 none;border-color:inherit}
+    input[disabled],textarea[disabled],select[disabled] {color:#999;background-color:#eaeaea}
     .check-group + .check-group,.check-group-inline {margin-top:10px}
     .check-group-inline {display:inline-block}
     .check-group-inline + .check-group-inline {margin-left:25px}
@@ -171,6 +184,35 @@ img {max-width:100%;vertical-align:middle;border:0 none}
     .ui-radio input:focus + i {outline:0 none}
     table .ui-check input + i,table .ui-radio input + i {margin-right:0}
 
+    .form-group-half {width:50%}
+    .form-group-half > div:first-child ~ div {margin-top:5px}
+    .form-with-btn > span {float:left}
+    .form-with-btn > span:first-child {width:65%}
+    .form-with-btn > span:first-child + span {width:35%;padding-left:10px}
+    .form-with-btn > span:first-child + span .ui-btn {width:100%}
+    .form-with-btn > span select {width:100%}
+    .form-with-btn > span > em {color:#777;font-style:normal;line-height:2.5}
+
+    .addr-num {width:73%}
+    .addr-num ~ div {width:50%;margin-top:5px}
+    .addr-num > div {float:left}
+    .addr-num > div:first-child {width:30%}
+    .addr-num > div:first-child ~ div {margin-left:5px}
+    .addr-num > div > span {float:left;width:50%}
+    .addr-num > div > span input {text-align:center}
+    .addr-num > div > span:first-child {position:relative;padding-right:20px}    
+    .addr-num > div > span:first-child:after {content:'';position:absolute;right:7px;top:0;bottom:0;margin:auto;width:6px;height:1px;background:#999}
+    .auto-addr > span {float:left;width:33.33333%}
+    .auto-addr > span:first-child {width:33.33334%}
+    .auto-addr > span:first-child ~ span {padding-left:5px}
+
+    .form-tel {width:50%}
+    .form-tel > span {float:left;width:33.33333%}
+    .form-tel > span input {text-align:center}
+    .form-tel > span:first-child {width:33.33334%}
+    .form-tel > span:first-child ~ span {position:relative;padding-left:20px}
+    .form-tel > span:first-child ~ span:before {content:'';position:absolute;left:7px;top:0;bottom:0;margin:auto;width:6px;height:1px;background:#999}
+
 /* Align */
     .t-left {text-align:left !important}
     .t-left th,.t-left td {text-align:left}
@@ -182,21 +224,21 @@ img {max-width:100%;vertical-align:middle;border:0 none}
 /* List */
     .list {counter-reset: myIndex sub;font-size:12px;line-height:1.5}
     .list-inline {margin-left:-5px}
-    .list li {position:relative;padding-left:15px;margin-top:5px;text-align:left}    
+    .list li {position:relative;padding-left:15px;margin-top:5px;text-align:left}
     .list-inline li {display:inline-block;padding-left:5px;padding-right:5px}
     .list > li:first-child {margin-top:0}
     .list > li:before,.list > li > ul > li:before,.list > li > ol > li:before {position:absolute;left:0}
     .list > li > ol li:before {counter-increment: sub;content:counter(sub)'.';top:0;width:auto;height:auto;border-radius:inherit;background-color:transparent}
     ul.list > li:before {content:'';top:7px;width:4px;height:4px;border-radius:2px;background-color:#555}
     ul.list > li > ul > li:before {content:"-"}
-    .list > li > ul,.list > li > ol {margin-left:10px}    
+    .list > li > ul,.list > li > ol {margin-left:10px}
     ol.list > li:before {counter-increment: myIndex;content:counter(myIndex)'.';top:0;width:auto;height:auto;border-radius:inherit;background-color:transparent}
     dl.list dd + dt {margin-top:10px}
     dl.list dd {margin:5px 0;line-height:1.5;text-align:left}
     dl.list-inline {overflow:hidden;margin-left:0}
     dl.list-inline dt {float:left;width:160px;overflow:hidden;font-weight:bold;text-align:right}
     dl.list-inline dd {margin-left:180px}
-    .list-inline li,.list-inline dt,.list-inline dd,.list li,.list dt,.list dd {line-height:1.42857143}
+    .list-inline li,.list-inline dt,.list-inline dd,.list li,.list dt,.list dd {line-height:2}
     .non-style li {padding-left:0}
     .non-style li:before {display:none}
 
@@ -241,10 +283,10 @@ img {max-width:100%;vertical-align:middle;border:0 none}
     .ui-btn-toggle.active {background-position:-60px -20px}
     .toggle-content {display:none}
     .toggle-content.active {display:block}
-    tr.toggle-content.active {display:table-row;background-color:#e9e9e9}
+    tr.toggle-content.active {display:table-row;background:#f5f5f5}
 
-/* box */    
-    .btn-close {position:absolute;right:15px;top:15px;width:21px;height:21px}
+/* box */
+    .btn-close {position:absolute;right:15px;top:10px;width:21px;height:21px}
     .btn-close:before {content:'';position:absolute;right:3px;top:3px;width:15px;height:15px;background-position:-42px 0}
 
     /* Help Content */
@@ -256,9 +298,18 @@ img {max-width:100%;vertical-align:middle;border:0 none}
     .ec-help-content .list > li:before {background-color:#fff}
     /* Info Box */
     .ui-info .btn-close:before {background-position:-27px 0}
-    .ui-info {position:relative;padding:10px 15px;margin:20px 0;border:1px solid #d9d9d9;background:#f5f7f8}
+    .ui-info {position:relative;padding:10px 15px;margin:20px 0;border:1px solid #d9d9d9;line-height:2;background:#f5f7f8}
     .ui-info  strong {display:block;margin-bottom:15px;font-size:12px}
     .ui-info  strong:before {content:'- '}
     .ui-info .ico-status {width:20px;height:20px;background-size:80px auto}
     .ui-info .update {background-position-x:-20px}
     .ui-info .error {background-position-x:-40px}
+
+/* search wrap */
+    .search-wrap {position:relative;padding:20px;border:1px solid #cecece;background:#efefef}
+    .search-wrap:after {content: '';position: absolute;left: -15px;right: 0;bottom: -30px;margin: auto;width: 0;height: 0;border: 15px solid #efefef;border-bottom-color: transparent;border-left-color: transparent;border-right-color: transparent}
+    .search-wrap table {border-collapse:separate;border-spacing:2px}
+    .search-wrap table th,.search-wrap table td {border:0 none}
+    .search-wrap table th {color:#fff;background:#586f99}
+    .search-wrap table td {background:#fff}
+    .search-wrap .btn-wrap .ui-btn {width:40%}
