--- a/ec/resource/css/ui-template.css
+++ b/ec/resource/css/ui-template.css
@@ -15,6 +15,7 @@
 .ui-scroll-content thead {position:absolute;top:-9999px;left:-99999px}
 .ui-scroll-table-header ul,.ui-scroll-content table {min-width:1200px}
 .ui-scroll-content td {border-bottom:0 none;border-top:1px solid #dedede}
+.ui-scroll-content td table tbody th {border-bottom:0 none}
 .ui-scroll-content tbody tr:first-child td {border-top:0 none}
 .ui-scroll-table-header ul li,.ui-scroll-content td {border-left:1px solid #dedede;}
 .ui-scroll-table-header ul li:first-child,.ui-scroll-content tbody tr td:first-child {border-left:0 none}
