--- a/ec/resource/css/style.css
+++ b/ec/resource/css/style.css
@@ -67,7 +67,7 @@ img {max-width:100%;vertical-align:middle;border:0 none}
     .ec-header:after {content:'';display:table;clear:both}
     .ec-logo {float:left;font-size:inherit}
     .ec-header-box {margin-left:153px}
-    .ec-service-free {position:relative;padding-left:15px;font-size:14px;line-height:1.714286;font-weight:700;color:#cacaca}
+    .ec-service-free {position:relati1ve;padding-left:15px;font-size:14px;line-height:1.714286;font-weight:700;color:#cacaca}
     .ec-service-free:active,.ec-service-free:focus,.ec-service-free:hover {color:#5693cd}
     .ec-service-free:before,.ec-service-free:after {content:'';position:absolute;top:0;bottom:0;margin:auto;width:1px;height:14px}
     .ec-service-free:before {left:0;background-color:#000}
@@ -105,7 +105,7 @@ img {max-width:100%;vertical-align:middle;border:0 none}
     .ec-menu-2depth a {display:block;padding:7px 15px;color:#555;font-size:12px}
     .ec-menu-2depth a:active,.ec-menu-2depth a:focus,.ec-menu-2depth a:hover,.ec-menu-2depth a.active {color:#333;background-color:#9fb6d3}
     .ec-menu > li > a.active + .ec-menu-2depth {display:block}
-    .ec-banner {margin-top:20px;height:100px;border-right:1px solid #ccc;background:#efefef}
+    .ec-banner {margin:20px 3px 0;height:95px;background:#efefef}
 
 /* layout */
     .ec-wrap {min-width:1070px;min-height:100%;padding:36px 0 30px;margin-left:193px;/* background-color:#e1e1e1; */transition:all .2s}
