--- a/ec/resource/css/style.css
+++ b/ec/resource/css/style.css
@@ -11,9 +11,10 @@ img {max-width:100%;vertical-align:middle;border:0 none}
     .table-info-group .btn-group-l {}
     .table-info-group .btn-group-r {text-align:right}
     .table-info-group .ui-btn {margin:3px 0}
-    table {width:100%;border-spacing:0;text-align:center;table-layout: fixed;font-size:12px;border-collapse:collapse;word-break:break-all}
+    table {width:100%;border-spacing:0;text-align:center;table-layout: fixed;font-size:11px;border-collapse:collapse;word-break:break-all}
     table th,table td {padding:3px 7px;vertical-align:middle;border-top:1px solid #dedede;border-bottom:1px solid #dedede;border-left:1px solid #dedede}
     td {text-align:left}    
+    td > p {margin:3px 0}
     th {text-align:inherit;background-color:#f5f5f5}
     th label {font-weight:inherit}
     table thead th {height:40px;border-bottom:0 none}
@@ -23,13 +24,12 @@ img {max-width:100%;vertical-align:middle;border:0 none}
     /* .data-table tbody tr.toggle-content:hover {background:#f5f5f5} */
     .data-table > tbody > tr:not(.toggle-content):hover {background-color:#f6f6f6}
 	.data-table td table {background: #fff}
-	.data-table td table th {background: #d6e4f7}
-	.data-table td table tbody th {border-left:0 none;border-color:#a6c0e3}
+	.data-table td table th {font-weight:normal;color:#fff;background: #555}
+    .data-table td table th,.data-table td table td {height:32px}
+	.data-table td table tbody th {border-left:0 none;border-color:#fff}
 	.data-table td table tbody th + td {border-left-color:#fff !important}
 	/* .data-table td table tbody tr:hover {background-color:#e9e9e9} */
-    .in-table {width:auto;margin:15px 10px}
-    .in-table thead th {color:#fff;font-weight:normal;background:#555 !important}
-    .in-table th,.in-table td {height:32px}
+    .in-table {width:auto}
     /* col class list */
     .col-check {width:50px} /* 체크박스 */
     .col-toggle {width:40px} /* 아코디언 토글 */
@@ -55,11 +55,12 @@ img {max-width:100%;vertical-align:middle;border:0 none}
     .col-per {width:150px} 
     .col-delivery {width:90px} 
     .col-sku {width:180px} 
+    .col-mapping {width:90px}
 
     .error-message {margin-top:10px;color:#fd4e4e}
 
 /* ico background */
-    .ec-menu > li:not(.single) > a:after,.ec-toggle-help,.btn-close:before,.ui-btn-toggle,.ui-scroll-table-header ul li > span:after,.search-wrap:after,.ui-dialog .ui-dialog-titlebar-close
+    .ec-menu > li:not(.single) > a:after,.ec-toggle-help,.btn-close:before,.ui-btn-toggle,.ui-scroll-table-header ul li > span:after,.search-wrap:after,.ui-dialog .ui-dialog-titlebar-close,.ec-lnb-wrap .show-menu:before,.ui-check input + i:after
     {background-color:transparent;background-image:url('/ec/resource/images/sp_ico.png');background-repeat:no-repeat}
 
 /* Header */
@@ -79,9 +80,13 @@ img {max-width:100%;vertical-align:middle;border:0 none}
     .ec-header-right > a:first-child:before {display:none}
 
 /* LNB */
-    .ec-lnb-wrap {position:fixed;left:0;top:0;z-index:9;width:193px;height:100%;padding-top:36px;font-size:14px;background-color:#fff/* #414958 */;transition:all .2s}    
+    .ec-lnb-wrap {overflow:auto;position:fixed;left:0;top:0;z-index:9;width:193px;height:100%;padding-top:36px;font-size:14px;background-color:#fff/* #414958 */;transition:all .2s}    
     .ec-lnb-wrap:after {content:'';position:absolute;right:0;top:0;z-index:-1;height:100%;width:1px;background-color:#ccc}
     .ec-lnb-content {height:100%;overflow-x:hidden;overflow-y:auto}
+    .ec-lnb-wrap .show-menu {display:none;position:fixed;left:0;top:0;height:100%;width:15px;cursor:none;background:transparent}
+    .ec-lnb-wrap .show-menu:before,.ec-lnb-wrap .show-menu:after {content:'';position:absolute;left:-50px;top:0;bottom:0;margin:auto;opacity:0;transition:all .2s}
+    .ec-lnb-wrap .show-menu:before {z-index:1;width:6px;height:10px;background-position:-74px -45px}
+    .ec-lnb-wrap .show-menu:after {width:50px;height:50px;border-radius:50%;background:#3b65b5}
     .toggle-lnb {overflow:hidden;display:inline-block;margin-right:25px;padding:3px 0;vertical-align:middle;cursor:pointer;border:0 none;outline:0 none;background:transparent}
     .toggle-lnb span {display:block;width:25px;height:3px;text-indent:-99999px;line-height:0;font-size:0;background:#fff}
     .toggle-lnb:before,.toggle-lnb:after {content:'';display:block;width:25px;height:3px;background:#fff}
@@ -107,6 +112,11 @@ img {max-width:100%;vertical-align:middle;border:0 none}
     .ec-wrap {min-width:1070px;min-height:100%;padding:36px 0 30px;margin-left:193px;/* background-color:#e1e1e1; */transition:all .2s}
     .wrap-expend {margin-left:0}
     .wrap-expend .ec-lnb-wrap {left:-193px}
+    .wrap-expend .ec-lnb-wrap .show-menu {display:block}
+    .wrap-expend .ec-lnb-wrap .show-menu:hover {cursor:pointer}
+    .wrap-expend .ec-lnb-wrap .show-menu:hover:before,.wrap-expend .ec-lnb-wrap .show-menu:hover:after {opacity:1}
+    .wrap-expend .ec-lnb-wrap .show-menu:hover:after {left:-25px}
+    .wrap-expend .ec-lnb-wrap .show-menu:hover:before {left:4px}
     .ec-row,.ec-help-content {margin:0 25px}
     .ec-section {margin:0 25px;background-color:#fff}    
 
@@ -124,7 +134,6 @@ img {max-width:100%;vertical-align:middle;border:0 none}
     .col-w-8 {width:80%}
     .col-w-9 {width:90%}
     .col-w-10 {width:100%}
-
 
 /* Typo */
     h1 {font-size:24px}
@@ -201,7 +210,7 @@ img {max-width:100%;vertical-align:middle;border:0 none}
     label {font-weight:normal}
     select {
         position:relative;padding:5px 25px 5px 5px;border-radius:0;vertical-align:middle;
-        background:transparent url('/ec/resource/images/bg_select_arr.png') no-repeat 100% 50%;
+        background:#fff url('/ec/resource/images/bg_select_arr.png') no-repeat 100% 50%;
         -webkit-appearance:none;-moz-appearance:none;appearance:none
     }
     input[readonly],textarea[readonly],select[readonly] {background-color:#eaeaea}
@@ -211,14 +220,18 @@ img {max-width:100%;vertical-align:middle;border:0 none}
     .check-group-inline {display:inline-block}
     .check-group:after,.check-group-inline:after {content:'';display:block;clear:both}
     .check-group-inline + .check-group-inline {margin-left:15px}
-    .check-group .ui-check,.check-group-inline .ui-check,.check-group .ui-radio,.check-group-inline .ui-radio {float:left;margin-left:7px;padding:5px;border-radius:4px;border:1px solid #dbdbdb}
+    .check-group .ui-check,.check-group-inline .ui-check,.check-group .ui-radio,.check-group-inline .ui-radio {float:left;margin-left:7px;padding:5px;border-radius:4px;border:1px solid #dbdbdb;background:#fff}
     .check-group .ui-check:first-child,.check-group-inline .ui-check:first-child,.check-group .ui-radio:first-child,.check-group-inline .ui-radio:first-child {margin-left:0}
     .ui-check,.ui-radio {position:relative;display:inline-block;min-width:16px;min-height:16px;vertical-align:middle}
     .ui-check input,.ui-radio input {position:absolute;left:0;top:0;z-index:5;width:16px;height:16px;opacity:0}
-    .ui-check input + i,.ui-radio input + i {position:relative;display:inline-block;width:16px;height:16px;margin-right:5px;padding:3px;vertical-align:middle;border:1px solid #bbb;background:#fff}
+    .ui-check input + i,.ui-radio input + i {position:relative;display:inline-block;width:16px;height:16px;margin-right:5px;padding:3px;vertical-align:middle;border:1px solid #ccc;background:#fff}
+    .ui-check input:checked + i,.ui-radio input:checked + i {border-color:#5ca8f1}
     .ui-check input:focus + i,.ui-radio input:focus + i {border-color:#3978ef}
-    .ui-check input + i:after,.ui-radio input + i:after {content:'';display:block;width:8px;height:8px;background:#dddddd}
-    .ui-check input:checked + i:after,.ui-radio input:checked + i:after {background:#5ca8f1}
+    .ui-check input + i:after,.ui-radio input + i:after {content:'';display:block;width:8px;height:8px}
+    .ui-check input + i:after {background-position:-72px -68px}
+    .ui-radio input + i:after {background:#dddddd}
+    .ui-check input:checked + i:after {background-position:-72px -60px}
+    .ui-radio input:checked + i:after {background:#5ca8f1}
     .ui-radio input + i,.ui-radio input + i:after {border-radius:10px}
     .ui-radio input:focus + i {outline:0 none}
     table .ui-check input + i,table .ui-radio input + i {margin-right:0}
@@ -241,14 +254,14 @@ img {max-width:100%;vertical-align:middle;border:0 none}
     .addr-num > div > span input {text-align:center}
     .addr-num > div > span:first-child {position:relative;padding-right:20px}
     .addr-num > div > span:first-child:after {content:'';position:absolute;right:7px;top:0;bottom:0;margin:auto;width:6px;height:1px;background:#999}
-    .auto-addr > span {float:left;width:33.33333%}
-    .auto-addr > span:first-child {width:33.33334%}
+    .auto-addr > span {float:left;width:calc(100% / 3)/* 33.33333% */}
+    /* .auto-addr > span:first-child {width:33.33334%} */
     .auto-addr > span:first-child ~ span {padding-left:5px}
 
     .form-tel {width:50%}
-    .form-tel > span {float:left;width:33.33333%}
+    .form-tel > span {float:left;width:calc(100% / 3)/* 33.33333% */}
     .form-tel > span input {text-align:center}
-    .form-tel > span:first-child {width:33.33334%}
+    /* .form-tel > span:first-child {width:33.33334%} */
     .form-tel > span:first-child ~ span {position:relative;padding-left:20px}
     .form-tel > span:first-child ~ span:before {content:'';position:absolute;left:7px;top:0;bottom:0;margin:auto;width:6px;height:1px;background:#999}
 
@@ -328,6 +341,7 @@ img {max-width:100%;vertical-align:middle;border:0 none}
     .toggle-content {display:none}
     .toggle-content.active {display:block}
     tr.toggle-content.active {display:table-row;background:#dfdfdf}
+    .toggle-content > td {padding:15px}
 
 /* box */
     .btn-close {position:absolute;right:15px;top:10px;width:21px;height:21px}
@@ -350,59 +364,35 @@ img {max-width:100%;vertical-align:middle;border:0 none}
     .ui-info .error {background-position-x:-40px}
 
 /* search wrap */
-    .search-wrap {position:relative;margin:25px 0;padding:20px;border:1px solid #e3e0e0;background:#f3f3f3}
-    .search-wrap:after {content: '';position: absolute;left:0;right: 0;bottom: -10px;margin: auto;width:30px;height:15px;background-position:-50px -93px}
+    .search-wrap {position:relative;margin:25px 0;padding:20px;background:#f5f5f5}
+    .search-wrap:after {display:none;content: '';position: absolute;left:0;right: 0;bottom: -10px;margin: auto;width:30px;height:15px;background-position:-50px -93px}
     .search-wrap .btn-wrap {margin-top:20px}
-    .search-wrap table {border-collapse:separate;border-spacing:0 2px}
-    .search-wrap table th,.search-wrap table td {border:0 none;background:#fff}
-    .search-wrap table th {padding:3px 0}
+    .search-wrap table {width:60%;min-width:978px;margin:0 auto;border-collapse:separate;border-spacing:0 2px}
+    .search-wrap table th,.search-wrap table td {border:0 none}
+    .search-wrap table th {padding:3px 0;background:transparent}
     .search-wrap table th > div {position:relative;display:inline-block;padding:0 10px;width:100%}
-    .search-wrap table th > div:before {content:'';position:absolute;top:0;bottom:0;margin:auto;width:1px;height:20px;background:#ccc}
+    .search-wrap table th > div:before {display:none;content:'';position:absolute;top:0;bottom:0;margin:auto;width:1px;height:20px;background:#ccc}
     .search-wrap table th > div:before  {left:0}
     .search-wrap table tr th:first-child > div:before {display:none}
-    .search-wrap .btn-wrap .ui-btn {width:25%}
+    .search-wrap .btn-wrap .ui-btn {width:15%}
 
-/* loader */
-    .loader {display:none;position:relative;z-index:1;height:180px}
-    .load {position:absolute;left:0;right:0;bottom:0;top:0;margin:auto;width:100px;height:130px}
-    .gear {position:absolute;z-index:-10;width:40px;height:40px;animation:spin 5s infinite}
-    .two {left:40px;width:80px;height:80px;animation:spin-reverse 5s infinite}
-    .three {top:45px;left:-10px;width:60px;height:60px}
-    .text {color: #a2a2a2;font-family: 'Open Sans',sans-serif;font-size: 18px;text-align: center;margin-top: 120px}
-    /* .ie6 .load > div,.ie7 .load > div,.ie8 .load > div,.ie9 .load > div {display:none}
-    .ie6 .load,.ie7 .load,.ie8 .load,.ie9 .load {width:120px;height:120px;background:transparent url('/ec/resource/images/ajax_loader.gif') no-repeat 0 50%;} */
-    @keyframes spin {
-        50% {transform:rotate(360deg)}
+/* UI Category */
+    .ui-category {margin-top:25px}
+    .cate-sch {overflow:hidden;width:40%}
+    .cate-sch input,.cate-sch .ui-btn {float:left;margin-right:5px}
+    .cate-sch input {width:calc(100% - 105px)}
+    .cate-sch .ui-btn {width:95px}
+    .cate-depth {overflow:hidden;margin:10px -3px 0}
+    .cate-depth > li {float:left;width:20%;padding:0 3px}
+    .cate-depth > li > strong,.cate-depth > li > div {border:1px solid #ccc}
+    .cate-depth > li > strong {display:block;text-align:center;font-size:12px;line-height:2.5;border-bottom:0 none;background:#ddd}
+    .cate-depth > li > div {overflow:auto;height:150px}
+    .cate-depth > li > div a {overflow:hidden;display:block;margin:2px 0;padding:5px;font-size:11px;white-space:nowrap;text-overflow:ellipsis;text-decoration:none;color:#666}
+    .cate-depth > li > div a:before {
+        content:'';display:inline-block;width:0;height:0;margin-right:2px;vertical-align:middle;border:4px solid #666;border-radius:2px;
+        border-top-color:transparent;border-right-color:transparent;border-bottom-color:transparent
     }
-    @keyframes spin-reverse {50% {transform:rotate(-360deg)}
-    }
-
-/* shadow */
-    .shadow,.ui-datepicker,.ui-dialog {
-        -webkit-box-shadow: 0 1px 3px rgba(0, 0, 0, 0.12), 0 1px 2px rgba(0, 0, 0, 0.24);
-        -moz-box-shadow: 0 1px 3px rgba(0, 0, 0, 0.12), 0 1px 2px rgba(0, 0, 0, 0.24);
-        -ms-box-shadow: 0 1px 3px rgba(0, 0, 0, 0.12), 0 1px 2px rgba(0, 0, 0, 0.24);
-        -o-box-shadow: 0 1px 3px rgba(0, 0, 0, 0.12), 0 1px 2px rgba(0, 0, 0, 0.24);
-        box-shadow: 0 1px 3px rgba(0, 0, 0, 0.12), 0 1px 2px rgba(0, 0, 0, 0.24);
-    }
-
-/* scroll bar */
-    .ui-scroll-content::-webkit-scrollbar {width: 17px;height: 17px;}
-    /* Track */
-    .ui-scroll-content::-webkit-scrollbar-track {
-      /* background-color: rgba(0, 0, 0, 0.2); */
-      background:#e5e5e5;
-    }
-
-    /* Handle */
-    .ui-scroll-content::-webkit-scrollbar-thumb {
-      background: rgba(48, 67, 104, 0.7);
-      border:5px solid #e5e5e5;
-      border-radius: 10px;
-    }
-    .ui-scroll-content::-webkit-scrollbar-thumb:hover {
-      background-color: rgba(48, 67, 104, 1);
-    }
-    .ui-scroll-content::-webkit-scrollbar-thumb:active {
-      background: linear-gradient(left, #22ADD4, #1E98BA);
-    }
+    .cate-depth > li > div a:hover,.cate-depth > li > div a.active {background:#efefef}
+    .cate-depth > li > div a.active {color:#2aa1ff}
+    .cate-depth > li > div a.active:before {border-left-color:#2aa1ff}
+    
