--- a/ec/resource/css/ui-template.css
+++ b/ec/resource/css/ui-template.css
@@ -1,21 +1,66 @@
 /* Scroll Table */
-.ui-scroll-table {position:relative;overflow:hidden;border-top:1px solid #dedede;border-bottom:1px solid #dedede}
-.ui-scroll-table-header {overflow:hidden;position:absolute;left:0;top:0;width:100%}
-.ui-scroll-table-header ul {display:table;width:100%;table-layout: fixed}
-.ui-scroll-table-header ul.over {padding-right:17px}
-.ui-scroll-table-header ul li {display:table-cell;height:40px;font-weight:bold;font-size:12px;text-align:center;vertical-align:middle;border-bottom:1px solid #dedede;background-color:#f5f5f5}
-.ui-scroll-table-header ul li > span {position:relative;display:block;height:100%;line-height:38px;cursor:pointer}
-.ui-scroll-table-header ul li > span::selection {background:transparent}
-.ui-scroll-table-header ul li > span:after {content:'';display:inline-block;width:8px;height:12px;margin-left:10px;vertical-align:middle;background-position:-20px -18px}
-.srot-on:after {background-position-x:-36px !important}
-.sort-type1:after {background-position-x:-28px !important}
-.ui-scroll-table-body {height:100%;padding-top:40px;background-color:#f5f5f5}
-.ui-scroll-content {overflow:auto;height:100%;background-color:#fff}
-.ui-scroll-content table {border-collapse:separate}
-.ui-scroll-content > table > thead {position:absolute;top:-9999px;left:-99999px}
-.ui-scroll-table-header ul,.ui-scroll-content table {min-width:1200px}
-.ui-scroll-content td {border-bottom:0 none;border-top:1px solid #dedede}
-.ui-scroll-content td table tbody th {border-bottom:0 none}
-.ui-scroll-content tbody tr:first-child td {border-top:0 none}
-.ui-scroll-table-header ul li,.ui-scroll-content td {border-left:1px solid #dedede;}
-.ui-scroll-table-header ul li:first-child,.ui-scroll-content tbody tr td:first-child {border-left:0 none}
+    .ui-scroll-table {position:relative;overflow:hidden;border-top:1px solid #dedede;border-bottom:1px solid #dedede}
+    .ui-scroll-table-header {overflow:hidden;position:absolute;left:0;top:0;width:100%}
+    .ui-scroll-table-header ul {display:table;width:100%;table-layout: fixed}
+    .ui-scroll-table-header ul.over {padding-right:17px}
+    .ui-scroll-table-header ul li {display:table-cell;height:40px;font-weight:bold;font-size:12px;text-align:center;vertical-align:middle;white-space:nowrap;border-bottom:1px solid #dedede;background-color:#f5f5f5}
+    .ui-scroll-table-header ul li > span {position:relative;display:block;height:100%;line-height:38px;cursor:pointer}
+    .ui-scroll-table-header ul li > span::selection {background:transparent}
+    .ui-scroll-table-header ul li > span:after {content:'';display:inline-block;width:8px;height:12px;margin-left:10px;vertical-align:middle;background-position:-20px -18px}
+    .srot-on:after {background-position-x:-36px !important}
+    .sort-type1:after {background-position-x:-28px !important}
+    .ui-scroll-table-body {height:100%;padding-top:40px;background-color:#f5f5f5}
+    .ui-scroll-content {overflow:auto;height:100%;background-color:#fff}
+    .ui-scroll-content table {border-collapse:separate}
+    .ui-scroll-content > table > thead {position:absolute;top:-9999px;left:-99999px}
+    .ui-scroll-table-header ul,.ui-scroll-content table {min-width:1200px}
+    .ui-scroll-content td {border-bottom:0 none;border-top:1px solid #dedede}
+    .ui-scroll-content td table tbody th {border-bottom:0 none}
+    .ui-scroll-content tbody tr:first-child td {border-top:0 none}
+    .ui-scroll-table-header ul li,.ui-scroll-content td {border-left:1px solid #dedede;}
+    .ui-scroll-table-header ul li:first-child,.ui-scroll-content tbody tr td:first-child {border-left:0 none}
+
+/* loader */
+    .loader {display:none;position:relative;z-index:1;height:180px}
+    .load {position:absolute;left:0;right:0;bottom:0;top:0;margin:auto;width:100px;height:130px}
+    .gear {position:absolute;z-index:-10;width:40px;height:40px;animation:spin 5s infinite}
+    .two {left:40px;width:80px;height:80px;animation:spin-reverse 5s infinite}
+    .three {top:45px;left:-10px;width:60px;height:60px}
+    .text {color: #a2a2a2;font-family: 'Open Sans',sans-serif;font-size: 18px;text-align: center;margin-top: 120px}
+    /* .ie6 .load > div,.ie7 .load > div,.ie8 .load > div,.ie9 .load > div {display:none}
+    .ie6 .load,.ie7 .load,.ie8 .load,.ie9 .load {width:120px;height:120px;background:transparent url('/ec/resource/images/ajax_loader.gif') no-repeat 0 50%;} */
+    @keyframes spin {
+        50% {transform:rotate(360deg)}
+    }
+    @keyframes spin-reverse {50% {transform:rotate(-360deg)}
+    }
+
+/* shadow */
+    .shadow,.ui-datepicker,.ui-dialog,.show-menu:after {
+        -webkit-box-shadow: 0 1px 3px rgba(0, 0, 0, 0.12), 0 1px 2px rgba(0, 0, 0, 0.24);
+        -moz-box-shadow: 0 1px 3px rgba(0, 0, 0, 0.12), 0 1px 2px rgba(0, 0, 0, 0.24);
+        -ms-box-shadow: 0 1px 3px rgba(0, 0, 0, 0.12), 0 1px 2px rgba(0, 0, 0, 0.24);
+        -o-box-shadow: 0 1px 3px rgba(0, 0, 0, 0.12), 0 1px 2px rgba(0, 0, 0, 0.24);
+        box-shadow: 0 1px 3px rgba(0, 0, 0, 0.12), 0 1px 2px rgba(0, 0, 0, 0.24);
+    }
+
+/* scroll bar */
+    .ui-scroll-content::-webkit-scrollbar {width: 17px;height: 17px;}
+    /* Track */
+    .ui-scroll-content::-webkit-scrollbar-track {
+      /* background-color: rgba(0, 0, 0, 0.2); */
+      background:#e5e5e5;
+    }
+
+    /* Handle */
+    .ui-scroll-content::-webkit-scrollbar-thumb {
+      background: rgba(48, 67, 104, 0.7);
+      border:5px solid #e5e5e5;
+      border-radius: 10px;
+    }
+    .ui-scroll-content::-webkit-scrollbar-thumb:hover {
+      background-color: rgba(48, 67, 104, 1);
+    }
+    .ui-scroll-content::-webkit-scrollbar-thumb:active {
+      background: linear-gradient(left, #22ADD4, #1E98BA);
+    }
