--- a/ec/resource/css/manual.css
+++ b/ec/resource/css/manual.css
@@ -4,11 +4,11 @@ body,h2.sub-header { font-family: Meiryo, "ＭＳ Ｐゴシック", "MS PGothic"
 .len-jp h1,.len-jp h2,.len-jp h3,.len-jp h4,.len-jp h5,.len-jp h6 {font-weight:700}
 .page-header {font-size:32px;border-width:4px;font-size:32px;border-color:#f8b36e}
 .ec-nav {padding:0 40px}
-.sub-header {position:relative;padding-left:14px;margin-bottom:20px;font-size:22px;font-weight:100 !important}
-.sub-headerㅊ:first-letter {font-weight:500}
-.sub-header:before {content:'';position:absolute;left:0;top:0;width:4px;height:100%;background-color:#f68b20}
+.sub-header {position:relative;padding-left:14px;padding-bottom:5px;margin-top:40px;margin-bottom:20px;font-size:22px;font-weight:100 !important;line-height:1.6;border-bottom:3px double #999}
+.sub-header:first-letter {font-weight:500}
+.sub-header:before {content:'';position:absolute;left:0;top:0;bottom:0;width:4px;height:75%;margin:auto;background-color:#f68b20}
 .sub-header + p,.sub-header + .sub-des {padding:0 0 10px 20px;margin-bottom:20px;border-bottom:2px dotted #ccc}
-
+.toggle-source {float:right}
 .navbar-brand {width:260px;padding:0 15px;line-height:50px;background:transparent url('../images/logo_manual.png') no-repeat 15px 50%;background-size:90% auto}
 .main {padding: 40px 20px}
 /* Sidebar navigation */
@@ -22,8 +22,9 @@ body,h2.sub-header { font-family: Meiryo, "ＭＳ Ｐゴシック", "MS PGothic"
 .guide-row {margin:25px 0}
 .guide-row:after {content:'';display:table;clear:both}
 .guide-row .ui-btn {margin:2px 0}
+.guide-code {display:none}
 .guide-code pre {background-color:#e9e9e9;box-shadow:inset 3px 3px 10px 0px rgba(0,0,0,.12)}
-.guide-code code {margin-top:-15px;white-space:pre-line;background-color:transparent}
+.guide-code code {margin-top:-15px;white-space:pre-line}
 .guide-box .ec-header,.guide-box .ec-lnb-wrap {position:relative}
 .guide-box .ec-header .ec-logo {margin:0}
 .guide-box [class^=col-md],.guide-box [class^=col-sm] {padding:10px 0}
