--- a/ec/resource/css/style.css
+++ b/ec/resource/css/style.css
@@ -12,19 +12,19 @@ img {max-width:100%;vertical-align:middle;border:0 none}
     .table-info-group .btn-group-r {text-align:right}
     .table-info-group .ui-btn {margin:3px 0}
     table {width:100%;border-spacing:0;text-align:center;table-layout: fixed;font-size:11px;border-collapse:collapse;word-break:break-all}
-    table th,table td {padding:3px 7px;vertical-align:middle;border-top:1px solid #dedede;border-bottom:1px solid #dedede;border-left:1px solid #dedede}
+    table th,table td {padding:3px 7px;vertical-align:middle;border-top:1px solid #dedede;border-bottom:1px solid #dedede;border-right:1px solid #dedede}
     td {text-align:left}
     td > p {margin:3px 0}
     th {text-align:inherit;background-color:#f5f5f5}
     th label {font-weight:inherit}
     table thead th {height:40px;border-bottom:0 none}
     table tbody th,table tbody td {height:38px}
-    table thead tr th:first-child,table tbody tr td:first-child,table tbody tr th:first-child {border-left:0 none}
+    table thead tr th:last-child,table tbody tr td:last-child,table tbody tr th:last-child {border-right:0 none}
     td img[src *='mall_logo_'] {width:87px}
     .data-table select {padding-top:1px;padding-bottom:1px;}
     /* .data-table tbody tr.toggle-content:hover {background:#f5f5f5} */
     .data-table > tbody > tr:not(.toggle-content):hover {background-color:#f6f6f6}
-    .data-table > tbody > .tr-selected {background-color:#ddf4ff !important}
+    .data-table > tbody > .tr-selected td {background-color:#ddf4ff !important}
 	.data-table td table {background: #fff}
 	.data-table td table th {font-weight:normal;color:#fff;background: #555}
     .data-table td table th,.data-table td table td {height:32px}
