--- a/ec/resource/css/style.css
+++ b/ec/resource/css/style.css
@@ -77,7 +77,7 @@ img {max-width:100%;vertical-align:middle;border:0 none}
     .pannel-wrap table td {background:#fff}
 
 /* ico background */
-    .ec-menu > li:not(.single) > a:after,.ec-toggle-help,.btn-close:before,.ui-btn-toggle,.ui-scroll-table-header ul li > span:after,.search-wrap:after,.ui-dialog .ui-dialog-titlebar-close,.ec-lnb-wrap .show-menu:before,.close-pannel:after
+    .ec-menu > li:not(.single) > a:after,.ec-toggle-help,.btn-close:before,.ui-btn-toggle,.ui-scroll-table-header ul li > div > span:after,.search-wrap:after,.ui-dialog .ui-dialog-titlebar-close,.ec-lnb-wrap .show-menu:before,.close-pannel:after
     {background-color:transparent;background-image:url('/ec/resource/images/sp_ico.png');background-repeat:no-repeat}
 
 /* Header */
@@ -90,7 +90,7 @@ img {max-width:100%;vertical-align:middle;border:0 none}
     .ec-service-free:before,.ec-service-free:after {content:'';position:absolute;top:0;bottom:0;margin:auto;width:1px;height:14px}
     .ec-service-free:before {left:0;background-color:#000}
     .ec-service-free:after {left:1px;background-color:#3f3f3f}
-    .ec-header-right {float:right}
+    .ec-header-right {float:right;width:40%;text-align:right}
     .ec-header-right {font-size:12px}
     .ec-header-right > a:not(.ui-btn) {position:relative;padding:0 15px;line-height:2;color:#a5a5a5;text-decoration:none}
     .ec-header-right > a:not(.ui-btn):before {content:'';position:absolute;left:0;top:0;bottom:0;margin:auto;width:1px;height:14px;background-color:#3f3f3f}
@@ -119,14 +119,15 @@ img {max-width:100%;vertical-align:middle;border:0 none}
     .ec-menu > li:not(.single) > a:after {content:'';position:absolute;right:15px;top:0;bottom:0;width:11px;height:6px;margin:auto;background-position:-15px -10px;opacity:.7}
     .ec-menu > li > a:not(.single):focus:after,.ec-menu > li > a:not(.single):hover:after {background-position:0 -10px}
     .ec-menu > li:not(.single) > a.active:after {background-position:0 0}
-    .ec-menu-2depth {display:none;padding:7px 0;border-right:1px solid #c8c8c8;background-color:#d2d6dd}
+    .ec-menu-2depth {display:none;border-right:1px solid #c8c8c8;background:#f2f2f2}
     .ec-menu-2depth a {display:block;padding:7px 15px;color:#555;font-size:12px}
-    .ec-menu-2depth a:focus,.ec-menu-2depth a:hover,.ec-menu-2depth a.active {color:#333;background-color:#9fb6d3}
+    .ec-menu-2depth a:focus,.ec-menu-2depth a:hover,.ec-menu-2depth a.active {color:#333;background:#b9b9b9}
     .ec-menu > li > a.active + .ec-menu-2depth {display:block}
     .ec-banner {margin:20px 3px 0;height:95px;background:#efefef}
 
 /* layout */
     .ec-wrap {min-width:1070px;min-height:100%;padding:36px 0 20px;margin-left:193px;/* background-color:#e1e1e1; */transition:all .2s}
+    .ec-pop-wrap {overflow:auto;height:100%;padding:0 15px 15px}
     .wrap-expend,.wrap-pannel {margin-left:0}
     .wrap-expend .ec-lnb-wrap,.wrap-pannel .ec-lnb-wrap {left:-193px}
     .wrap-expend .ec-lnb-wrap .show-menu {display:block}
@@ -219,14 +220,14 @@ img {max-width:100%;vertical-align:middle;border:0 none}
 /* forms */
     input[type=password] {font-family:"Tahoma",sans-serif}
     input[type=text],input[type=password],textarea,select {font-size:12px;color:#666;line-height:1.5;border:1px solid #d9d9d9}
-    input[type=text],input[type=password],textarea {width:100%}
+    input[type=text],input[type=password],textarea {width:100%;-webkit-appearance:none;border-radius:0}
     input[type=text],input[type=password] {padding:5px}
     input[type=text]:focus,input[type=password]:focus,textarea:focus {outline:1px solid #1f89ed;border-color:#1f89ed}
     input[type=checkbox], input[type=radio],label {margin:0}
     textarea {padding:10px}
     label {font-weight:normal}
     select {
-        position:relative;padding:5px 25px 5px 5px;border-radius:0;vertical-align:middle;
+        position:relative;padding:6px 25px 6px 5px;border-radius:0;vertical-align:middle;
         background:#fff url('/ec/resource/images/bg_select_arr.png') no-repeat 100% 50%;
         -webkit-appearance:none;-moz-appearance:none;appearance:none
     }
@@ -250,7 +251,12 @@ img {max-width:100%;vertical-align:middle;border:0 none}
     .ui-radio input:focus + i {outline:0 none}
     table .ui-check input + i,table .ui-radio input + i {margin-right:0}
 
-    .form-group-half {width:50%}
+    .ui-file {position:relative;display:inline-block;min-width:300px;padding-left:73px}
+    .ui-file > label {position:absolute;left:0;top:0;z-index:1;width:100%;height:100%}
+    .ui-file > label > span {position:absolute;left:0;top:0;width:70px;padding:0 10px;color:#fff;font-size:12px;line-height:2.5;text-align:center;background:#499eef}
+    .ui-file > label input {position:absolute;left:0;top:0;width:100%;height:30px;opacity:0}
+    .ui-file > input {}
+
     .form-name > div:first-child ~ div {margin-top:5px}
     .form-with-btn > span {float:left}
     .form-with-btn > span:first-child {width:65%}
@@ -271,7 +277,6 @@ img {max-width:100%;vertical-align:middle;border:0 none}
     .auto-addr > span {float:left;width:calc(100% / 3)/* 33.33333% */}
     .auto-addr > span:first-child ~ span {padding-left:5px}
 
-    .form-tel {width:50%}
     .form-tel > span {float:left;width:calc(100% / 3)/* 33.33333% */}
     .form-tel > span input {text-align:center}
     /* .form-tel > span:first-child {width:33.33334%} */
