--- a/ec/resource/css/style.css
+++ b/ec/resource/css/style.css
@@ -35,27 +35,27 @@ img {max-width:100%;vertical-align:middle;border:0 none}
     .in-table {width:auto}
     .in-table th,.in-table td {padding-left:15px;padding-right:15px}
     /* col class list */
-    .col-num {width:50px} /* row number */
-    .col-check {width:50px} /* 체크박스 */
-    .col-toggle {width:40px} /* 아코디언 토글 */
-    .col-logo {width:126px} /* 몰 로고 */
-    .col-name {width:180px} /* 상점이름 */
-    .col-id {width:120px} /* 각종 ID영역 */
-    .col-status {width:60px} /* 상태 */
-    .col-type {width:70px} /* 유형 */
-    .col-fnc {width:92px} /* 쇼핑몰 제휴기능 */
-    .col-login {width:90px} /* 쇼핑몰 로그인 */
-    .col-join {width:110px} /* 연결 확인 */
-    .col-etc {width:160px} /* 인증유효기간 */
-    .col-edit {width:56px} /* 편집 */
-    .col-add {width:70px} /* 추가/복제 */
-    .col-del {width:56px} /* 삭제 */
-    .col-code {width:140px} /* 상품코드 */
-    .col-code1 {width:170px} /* 개별상품코드 */
-    .col-code2 {width:210px} /* 쇼핑몰상품코드 */
-    .col-order {width:210px} /* 주문번호 */
-    .col-prd {width:360px} /* 상품이름 */
-    .col-prd-w {width:500px} /* 상품이름 wide*/
+    .col-num {width:50px}
+    .col-check {width:50px}
+    .col-toggle {width:40px}
+    .col-logo {width:126px}
+    .col-name {width:180px}
+    .col-id {width:120px}
+    .col-status {width:60px}
+    .col-type {width:70px}
+    .col-fnc {width:92px}
+    .col-login {width:90px}
+    .col-join {width:110px}
+    .col-etc {width:160px}
+    .col-edit {width:56px}
+    .col-add {width:70px}
+    .col-del {width:56px}
+    .col-code {width:140px}
+    .col-code1 {width:170px}
+    .col-code2 {width:210px}
+    .col-order {width:210px}
+    .col-prd {width:360px}
+    .col-prd-w {width:500px}
     .col-stock {width:150px}
     .col-send {width:100px}
     .col-sale {width:100px}
@@ -66,18 +66,17 @@ img {max-width:100%;vertical-align:middle;border:0 none}
     .col-delivery {width:90px}
     .col-sku {width:180px}
     .col-mapping {width:90px}
-    .col-option {width:140px} /* 옵션명 */
-    .col-stockcount {width:80px} /* 재고수량 */
-    .col-stocktype {width:100px} /* 재고유형 */
-    .col-wholesalers {width:130px} /* 공급업체 */
-    .col-divsion {width:130px} /* 구분 */
-    .col-edit-list {width:150px} /* 변경항목 */
-    .col-edit-status {width:200px} /* 변경 전/후 */
+    .col-option {width:140px}
+    .col-stockcount {width:80px}
+    .col-wholesalers {width:130px}
+    .col-divsion {width:130px}
+    .col-edit-list {width:150px}
+    .col-edit-status {width:200px}
     .error-message {display:none;margin-top:10px;color:#fd4e4e}
     .pannel-wrap table td {background:#fff}
 
 /* ico background */
-    .ec-menu > li:not(.single) > a:after,.ec-toggle-help,.btn-close:before,.ui-btn-toggle,.ui-scroll-table-header ul li > div > span:after,.search-wrap:after,.ui-dialog .ui-dialog-titlebar-close,.ec-lnb-wrap .show-menu:before,.close-pannel:after
+    .ec-menu > li:not(.single) > a:after,.ec-toggle-help,.btn-close:before,.ui-btn-toggle,.ui-scroll-table-header ul li > div > span:after,.search-wrap:after,.ui-dialog .ui-dialog-titlebar-close,.ec-lnb-wrap .show-menu:before,.close-pannel:after,.layer-header button,.add-thumb:before
     {background-color:transparent;background-image:url('/ec/resource/images/sp_ico.png');background-repeat:no-repeat}
 
 /* Header */
@@ -140,7 +139,7 @@ img {max-width:100%;vertical-align:middle;border:0 none}
 
     .grid {margin:0 -3px}
     .grid:after {content:'';display:block;clear:both}
-    .grid .col-w-1,.grid .col-w-2,.grid .col-w-3,.grid .col-w-4,.grid .col-w-5,.grid .col-w-6,.grid .col-w-7,.grid .col-w-8,.grid .col-w-9,.grid .col-w-10 {float:left;padding:0 3px}
+    .grid > .col-w-1,.grid > .col-w-2,.grid > .col-w-3,.grid > .col-w-4,.grid > .col-w-5,.grid > .col-w-6,.grid > .col-w-7,.grid > .col-w-8,.grid > .col-w-9,.grid > .col-w-10 {float:left;padding:0 3px}
     div[class*='col-w'] > select,div[class*='col-w'] > .ui-btn {width:100%}
     .col-w-1 {width:10% !important}
     .col-w-2 {width:20% !important}
@@ -174,6 +173,7 @@ img {max-width:100%;vertical-align:middle;border:0 none}
     .ui-btn:hover {border-color:#adadad;background-color:#e5e5e5}
 
     /* button size */
+    .btn-full {width:100%}
     .btn-xl {height:42px;padding:8px 16px;font-size:18px;line-height:1.3333333}
     .btn-l {height:36px;padding:7px 10px;font-size:14px;line-height:1.42857143}
     .btn-s {height:22px;padding:1px 5px}
@@ -213,7 +213,7 @@ img {max-width:100%;vertical-align:middle;border:0 none}
     .btn-red.disabled,.btn-red.disabled:hover,
     .btn-red[disabled],.btn-red[disabled]:hover {border-color:#d43f3a;background-color:#d9534f}
 
-    .btn-wrap {margin-top:30px;text-align:center}
+    .btn-wrap {margin-top:30px;text-align:center}    
     .btn-group-inline {overflow:hidden;display:inline-block;margin-left:3px;vertical-align:middle}
     .btn-group-inline > .ui-btn {float:left;margin:0 2px}
 
@@ -221,7 +221,7 @@ img {max-width:100%;vertical-align:middle;border:0 none}
     input[type=password] {font-family:"Tahoma",sans-serif}
     input[type=text],input[type=password],textarea,select {font-size:12px;color:#666;line-height:1.5;border:1px solid #d9d9d9}
     input[type=text],input[type=password],textarea {width:100%;-webkit-appearance:none;border-radius:0}
-    input[type=text],input[type=password] {padding:5px}
+    input[type=text],input[type=password] {padding:5px;vertical-align:top}
     input[type=text]:focus,input[type=password]:focus,textarea:focus {outline:1px solid #1f89ed;border-color:#1f89ed}
     input[type=checkbox], input[type=radio],label {margin:0}
     textarea {padding:10px}
@@ -235,10 +235,10 @@ img {max-width:100%;vertical-align:middle;border:0 none}
     input[readonly]:focus,textarea[readonly]:focus,select[readonly]:focus {outline:0 none}
     input[disabled],textarea[disabled],select[disabled] {color:#999;background-color:#eaeaea}
     .check-group + .check-group,.check-group + .check-group-inline {margin-top:10px}
-    .check-group-inline {display:inline-block}
+    .check-group-inline {display:inline-block;vertical-align:top}
     .check-group:after,.check-group-inline:after {content:'';display:block;clear:both}
     .check-group-inline + .check-group-inline {margin-left:15px}
-    .check-group .ui-check,.check-group-inline .ui-check,.check-group .ui-radio,.check-group-inline .ui-radio {float:left;margin-right:3px;margin-bottom:3px;padding:5px;border-radius:4px;border:1px solid #dbdbdb;background:#fff}
+    .check-group > .ui-check,.check-group-inline > .ui-check,.check-group > .ui-radio,.check-group-inline > .ui-radio,.check-group-inline > .input-group {float:left;margin-right:3px;margin-bottom:3px;padding:5px;/* border-radius:4px; */border:1px solid #dbdbdb;background:#fff}
     .check-group .ui-check:last-child,.check-group-inline .ui-check:last-child,.check-group .ui-radio:last-child,.check-group-inline .ui-radio:last-child {margin-right:0}
     .ui-check,.ui-radio {position:relative;display:inline-block;min-width:16px;min-height:16px;vertical-align:middle}
     .ui-check input,.ui-radio input {position:absolute;left:0;top:0;z-index:5;width:16px;height:16px;opacity:0}
@@ -250,6 +250,8 @@ img {max-width:100%;vertical-align:middle;border:0 none}
     .ui-radio input + i,.ui-radio input + i:after {border-radius:10px}
     .ui-radio input:focus + i {outline:0 none}
     table .ui-check input + i,table .ui-radio input + i {margin-right:0}
+
+    .ui-radio.disabled,.ui-check.disabled {opacity:.5}
 
     .ui-file {position:relative;display:inline-block;min-width:300px;padding-left:73px}
     .ui-file > label {position:absolute;left:0;top:0;z-index:1;width:100%;height:100%}
@@ -282,8 +284,12 @@ img {max-width:100%;vertical-align:middle;border:0 none}
     /* .form-tel > span:first-child {width:33.33334%} */
     .form-tel > span:first-child ~ span {position:relative;padding-left:20px}
     .form-tel > span:first-child ~ span:before {content:'';position:absolute;left:7px;top:0;bottom:0;margin:auto;width:6px;height:1px;background:#999}
-
     .form-price input {width:calc(100% - 15px);text-align:right}
+
+    .input-group {position:relative;overflow:hidden;padding:4px 5px !important}
+    .input-group .ui-datepicker-trigger {width:20px}
+    .input-group-date {float:left;margin-right:3px}
+    .input-group input[type='text'] {width:150px;margin-left:5px;padding:0 5px}
 
 
     /* toggle switch */
@@ -316,7 +322,7 @@ img {max-width:100%;vertical-align:middle;border:0 none}
 /* List */
     .list {counter-reset: myIndex sub;font-size:12px;line-height:1.5}
     .list-inline {margin-left:-5px}
-    .list li {position:relative;padding-left:15px;margin-top:5px;text-align:left}
+    .list li {position:relative;padding-left:15px !important;margin-top:5px;text-align:left}
     .list-inline li {display:inline-block;padding-left:5px;padding-right:5px}
     .list > li:first-child {margin-top:0}
     .list > li:before,.list > li > ul > li:before,.list > li > ol > li:before {position:absolute;left:0}
@@ -368,6 +374,7 @@ img {max-width:100%;vertical-align:middle;border:0 none}
         display:inline-block;height:18px;padding:0 7px;font-size:11px;font-weight:100;line-height:20px;color:#fff;
         text-align:center;white-space:nowrap;vertical-align:middle;background-color:#a9a9a9
     }
+    .ui-label.danger {background:#fd4e4e;color:#fff}
 
 /* badge */
     .badge {display: inline-block;min-width: 10px;padding: 3px 7px;margin-left:10px;font-size: 11px;line-height: 1;color: #fff;text-align: center;white-space: nowrap;vertical-align: baseline;background: #8697b7;border-radius: 10px;}
@@ -483,3 +490,76 @@ img {max-width:100%;vertical-align:middle;border:0 none}
     .i-mail-pc:after {background-position:-120px 0}
     .i-mail-mobile:after {background-position:-144px 0}
     .i-mail-mobile2:after {background-position:-168px 0}
+
+/* Layer Popup */
+    .layer-wrap {position:fixed;left:0;top:0;z-index:100;width:100%;height:100%;background:rgba(34,34,34,.6)}
+    .layer-container {position:fixed;padding:36px 2px 51px;background:#fff}
+    .layer-header {position:absolute;left:0;right:0;top:2px;margin:0 2px;padding:0 14px;background:#3769be}
+    .layer-header > span {font-size:14px;line-height:2.428571428;color:#fff}
+    .layer-header button {position: absolute;right:5px;top:0;bottom:0;margin:auto 0;width:15px;height:15px;border:0;outline:none;background-position: -42px 0}
+    .layer-content {overflow:auto;height:100%;padding:15px}
+    .layer-footer {position:absolute;left:0;right:0;bottom:0;margin:0 2px;padding:10px 5px;text-align:right;border-top:1px solid #d9d9d9}
+    .layer-footer-l {float:left}
+    .ui-draggable-handle {cursor:move}
+    .ui-resizable-handle.ui-icon {background:none !important}
+    .layer-sch-wrap {padding:10px 15px;margin-bottom:10px;background:#f0f0f0}
+    .layer-sch-wrap ul {display:table;width:100%;margin:0;font-size:12px}
+    .layer-sch-wrap ul li {display:table-row}
+    .layer-sch-wrap ul li > strong,.layer-sch-wrap ul li > div {display:table-cell;padding:3px 0}
+    .loading {background:transparent url('/ec/resource/images/ajax_loader.gif') no-repeat  50% 50%}
+    .layer-content .page-title-sub {margin:0 0 10px}
+    .layer-content .ec-help-content {margin-left:0;margin-right:0;margin-bottom:10px}
+
+/* window popup */
+    .ec-pop-wrap .ec-section,.ec-pop-wrap .ec-help-content {margin:0}
+    
+    /* 상품편집 */
+    .edit-prd-pop {padding:0}
+    .edit-prd-info {position:fixed;left:0;top:0;z-index:10;width:100%;height:100px;padding:15px 15px 15px 180px;background:#d9d9d9}
+    .edit-prd-info > span {overflow:hidden;position:absolute;left:20px;top:0;bottom:0;width:130px;height:80px;padding-top:4px;margin:auto;border-radius:10px;background:#fff}    
+    .edit-prd-info .list li {line-height:1.5}
+    .edit-prd-info ~ .ui-tab-wrap{margin-top:10px}
+    .edit-tabs .ui-tabs-nav {position:fixed;left:0;top:100px;z-index:10;width:100%;padding-top:20px;background:#fff;box-shadow:0 2px 5px 0px rgba(0, 0, 0, 0.1)}
+    .save-edit-content {position:fixed;right:15px;top:95px;z-index:10;padding-top:20px}
+    .edit-tabs .ui-tabs-nav li:first-child {margin-left:15px !important}
+    .edit-row {height:100%;padding-top:150px}
+    .edit-row-scroll {overflow:auto;height:100%;padding:0 15px}
+    .edit-form {font-size:12px}
+    .edit-form .edit-form-row:first-child {margin-top:0}
+    .edit-form-row {padding:15px 0;}
+    /* .edit-form-row:nth-child(even) {background:#f2f6fa} */
+    .edit-label {overflow:hidden;padding:0 15px;line-height:3.166667;background:#eceff2}
+    .edit-label .ui-label {vertical-align:top}
+    .edit-label > strong {color:#333}
+    .edit-label > strong:before {content: url('/ec/resource/images/bg_select_arr.png');margin-right:5px}
+    .edit-label > div {float:right}
+    .edit-label > div .ui-btn {vertical-align:baseline}
+    .edit-form-unit {margin-top:10px;padding:0 15px}
+    .edit-form-cate {margin-top:20px;padding:0 15px}
+    .no-unit {text-align:center;padding-top:15px;padding-bottom:15px;background:#f1f1f1}
+    .edit-form-cate .edit-form-unit {padding:0}
+    .calc-byte {margin-left:10px;}
+    .calc-byte i {color:#f21542}
+    .input-addon {overflow:hidden}
+    .input-addon > span,.input-addon > input {float:left}
+    .input-addon > input {width:80%}
+    .input-addon > span:first-child {width:20%;padding:6px 0;line-height:1.5;text-align:center;color:#333;background:#c1c1c1}
+    .input-addon .ui-date input {width:calc(100% - 33px)}
+    .txt-guide {clear:both;margin:5px 0;font-size:11px}
+    .txt-guide:before {content:'※';margin-right:5px}
+    .edit-btn-group {margin-bottom:5px;text-align:right}
+    .edit-form-thumb > li {overflow:hidden;margin-top:20px}
+    .edit-form-thumb > li > div {float:left}
+    .edit-form-thumb .prd-thumb {width:120px;min-height:120px;padding:5px;margin-right:10px;text-align:center;border:1px solid #d9d9d9}
+    .edit-form-thumb .prd-thumb img {cursor:pointer}
+    .edit-form-thumb .prd-thumb-edit {width:calc(100% - 130px)}
+    .edit-form-thumb .prd-thumb-edit .badge {vertical-align:middle}
+    .edit-form-thumb .prd-thumb-edit > strong {font-size:16px;font-weight:normal}
+    .edit-form-thumb .edit-form-unit {position:relative;padding:0}
+    .edit-form-thumb .edit-form-unit .ui-btn {position:absolute;right:0;top:0}
+    .edit-form-thumb {overflow:hidden}
+    .add-thumb {margin-top:15px;}
+    .add-thumb:before {content:'';display:inline-block;width:14px;height:14px;margin-right:10px;vertical-align:middle;background-position:100% 100%}
+    .ui-form-time {padding-left:3px;text-align:center}
+    .ui-form-time input {width:43%;text-align:center}
+    .ui-form-time i {display:inline-block;line-height:30px;width:14%}
