--- a/ec/resource/css/ui-template.css
+++ b/ec/resource/css/ui-template.css
@@ -14,7 +14,7 @@
     .ui-scroll-content {overflow:auto;height:100%;background-color:#fff}
     .ui-scroll-content table {border-collapse:separate}
     .ui-scroll-content > table > thead {position:absolute;top:-9999px;left:-99999px}
-    .ui-scroll-table-header ul,.ui-scroll-content > table {min-width:1200px}
+    /* .ui-scroll-content > table {min-width:1200px} */
     .ui-scroll-content td {border-bottom:0 none;border-top:1px solid #dedede;background:#fff}
     .ui-scroll-content td table tbody th {border-bottom:0 none}
     .ui-scroll-content tbody tr:first-child td {border-top:0 none}
